--- a/index.html
+++ b/index.html
@@ -5,10 +5,61 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <title>Document</title>
+        <title>YOGASANA</title>
     </head>
     <body>
         <script src="script.js"></script>
-        div.container
+        <div class="header">
+            <div class="container">
+                <div class="title">
+                    <h2>Welcome to</h2>
+                    <h1>YOGASANA</h1>
+                </div>
+            </div>
+            <div class="button-holder">
+                <button class="button" onclick="generateAsans()">
+                    GENERATE
+                </button>
+            </div>
+            <div id="loader" class="loader">
+                <span class="loader__element"></span>
+                <span class="loader__element"></span>
+                <span class="loader__element"></span>
+            </div>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div id="tr" class="asan">
+                    <div class="asan-title">
+                        <h3>title</h3>
+                    </div>
+                </div>
+                <div class="asan">
+                    <div class="asan-title">
+                        <h3>title</h3>
+                    </div>
+                </div>
+                <div class="asan">
+                    <div class="asan-title">
+                        <h3>title</h3>
+                    </div>
+                </div>
+                <div class="asan">
+                    <div class="asan-title">
+                        <h3>title</h3>
+                    </div>
+                </div>
+                <div class="asan">
+                    <div class="asan-title">
+                        <h3>title</h3>
+                    </div>
+                </div>
+                <div class="asan">
+                    <div class="asan-title">
+                        <h3>title</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
