--- a/index.html
+++ b/index.html
@@ -27,37 +27,92 @@
                 <span class="loader__element"></span>
             </div>
         </div>
-        <div class="content">
-            <div class="container">
-                <div id="tr" class="asan">
+        <div class="container">
+            <div class="content">
+                <div
+                    id="tr"
+                    class="asan"
+                    style="
+                        background-image: url(img/1.jpg);
+                        background-size: cover;
+                        background-position: center center;
+                    "
+                >
                     <div class="asan-title">
                         <h3>title</h3>
                     </div>
                 </div>
-                <div class="asan">
+                <div
+                    class="asan"
+                    style="
+                        background-image: url(img/2.jpg);
+                        background-size: cover;
+                        background-position: center center;
+                    "
+                >
                     <div class="asan-title">
                         <h3>title</h3>
                     </div>
                 </div>
-                <div class="asan">
+                <div
+                    class="asan"
+                    style="
+                        background-image: url(img/3.webp);
+                        background-size: cover;
+                        background-position: center center;
+                    "
+                >
                     <div class="asan-title">
                         <h3>title</h3>
                     </div>
                 </div>
-                <div class="asan">
+                <div
+                    class="asan"
+                    style="
+                        background-image: url(img/4.jpg);
+                        background-size: cover;
+                        background-position: center center;
+                    "
+                >
                     <div class="asan-title">
                         <h3>title</h3>
                     </div>
                 </div>
-                <div class="asan">
+                <div
+                    class="asan"
+                    style="
+                        background-image: url(img/5.jpeg);
+                        background-size: cover;
+                        background-position: center center;
+                    "
+                >
                     <div class="asan-title">
                         <h3>title</h3>
                     </div>
                 </div>
-                <div class="asan">
+                <div
+                    class="asan"
+                    style="
+                        background-image: url(img/6.jpeg);
+                        background-size: cover;
+                        background-position: center center;
+                    "
+                >
                     <div class="asan-title">
                         <h3>title</h3>
                     </div>
+                </div>
+                <div class="get-up-holder">
+                    <img
+                        src="img/lotus-flower.png"
+                        alt="above"
+                        style="width: 50px; height: 50px"
+                    />
+                    <button class="get-up">
+                        <a href="https://evgenyfokin.github.io/aasanaGEN/"
+                            >UP</a
+                        >
+                    </button>
                 </div>
             </div>
         </div>
